test/e2e/testdata/load_balancing_client_side_weighted_round_robin_penalty.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-backend-cswrr-penalty
  namespace: gateway-conformance-infra
spec:
  selector:
    app: lb-backend-cswrr-penalty
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-backend-cswrr-penalty
  namespace: gateway-conformance-infra
  labels:
    app: lb-backend-cswrr-penalty
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lb-backend-cswrr-penalty
  template:
    metadata:
      labels:
        app: lb-backend-cswrr-penalty
    spec:
      containers:
        - name: backend
          image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: lb-backend-cswrr-penalty
          resources:
            requests:
              cpu: 10m
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: client-side-wrr-lb-policy-penalty
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: client-side-wrr-lb-route-penalty
  loadBalancer:
    type: ClientSideWeightedRoundRobin
    clientSideWeightedRoundRobin:
      errorUtilizationPenalty: 2.0
      metricNamesForComputingUtilization:
        - named_metrics.foo
        - cpu_utilization
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: client-side-wrr-lb-route-penalty
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cswrrpenalty
      backendRefs:
        - name: lb-backend-cswrr-penalty
          port: 8080
